# wallity-iced

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: config.rs  constants.rs  events.rs  image.rs  main.rs  message.rs  thumbnail.rs  ui.rs  util.rs  wallpaper.rs  wallpaper_image.rs
src/ui/: mod.rs  navigation.rs  tests.rs
