[package]
name = "wallity-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resolve-path = "0.1.0"
toml = "0.9.8"
infer = "0.19.0"
mime = "0.3.17"
once_cell = "1.21.3"
anyhow = "1.0.100"
image = "0.25.9"
rayon = "1.11.0"
notify = "6.1"
iced = { version = "0.14", features = ["wgpu", "canvas", "advanced", "svg", "image", "qr_code", "markdown", "highlighter"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread","time"] }


