[package]
name = "wallity"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
image = "0.25.9"
iced = { version = "0.14", features = ["wgpu", "image"] }
once_cell = "1.21.3"
rayon = "1.11.0"
resolve-path = "0.1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
